--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     border: 0;
     font-family: poppins;
+    overflow-x: hidden;
 }
 
 .hero-section{
@@ -19,6 +20,7 @@
     margin-top: 10px;
     height: 19px;
     padding: 16px 48px;
+    overflow-y: hidden;
 }
 
 .navbar a{
@@ -74,7 +76,7 @@
     width: 200px;
 }
 
-.hero-section-input-container{
+.hero-section_input-container{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,7 +88,7 @@
 
 }
 
-.hero-section-input{
+.hero-section_input{
     padding: 5px;
     border: none;
     outline: none;
@@ -126,6 +128,7 @@
 
 .we-offer-card:hover{
     transform: scale(1.1);
+    cursor: pointer;
 }
 
 .we-offer-card img{
@@ -147,4 +150,378 @@
 .we-offer-content p{
     font-size: 12.5px;
     font-weight: 400;
+}
+
+.collections h1{
+    font-weight: 600;
+}
+
+.collections{
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+}
+
+.collections .sub__heading_container{
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.sub__heading_container span:nth-child(2){
+    color: #ff7e8b;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.collections_card_container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+    margin-top: 1.5rem;
+}
+
+.collections_card_container .card{
+    height: 300px;
+    width: 250px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    position: relative;
+}
+
+.card1{
+    background-image: url(images/collection1.jpg);
+}
+
+.card2{
+    background-image: url(images/collection2.jpg);
+}
+
+.card3{
+    background-image: url(images/collection3.jpg);
+}
+
+.card4{
+    background-image: url(images/collection4.jpg);
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    background: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.9)0%
+        rgba(0,0,0,0.5)50%
+        rgba(0,0,0,0.9)85%
+    );
+    z-index: 1;
+}
+
+.collections_card_container .card .content{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: white;
+    font-size: .9rem;
+    padding: 10px 16px;
+}
+
+.content h4{
+    font-weight: 400;
+    letter-spacing: .5px;
+}
+
+.get__the_app{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255,251,247);
+    width: 100%;
+    padding: 3rem 6rem;
+}
+
+.get__the_app .semiContainer{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.get__the_app .semiContainer .left{
+    flex: 2;
+}
+
+.get__the_app .semiContainer .left img{
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.get__the_app .semiContainer .right{
+    flex: 3;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.right h1{
+    font-weight: 400;
+    font-size: 2rem;
+}
+
+.right p{
+    font-size: .8rem;
+}
+
+.right .radio__button_container{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.right .radio__button_container div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.right .radio__button_container div input{
+    height: 15px;
+    width: 15px;
+    accent-color: rgb(239,79,95);
+}
+
+.right .input_container{
+    display: flex;
+    gap: .5rem;
+}
+
+.right .input_container button,
+.right .input_container input{
+    padding: 10px 12px;
+}
+
+.input_container input{
+    flex: auto;
+    border: 1.5px solid gray;
+    border-radius: 5px;
+    outline: none;
+}
+
+.input_container button{
+    border: none;
+    background-color: rgb(239, 79, 98);
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.right .download__app_container{
+    display: flex;
+    flex-direction: column;
+    gap: .7rem;
+}
+
+.right .download__app_container h5{
+    font-weight: 400;
+    color: gray;
+    outline: none;
+    border-radius: 10px;
+}
+
+.right .download__app_container div{
+    display: flex;
+    gap: 1rem;
+}
+
+.right .download__app_container div img{
+    width: 35%;
+}
+
+@media only screen and (max-width: 1300px) {
+    .get__the_app .semiContainer .left,
+    .get__the_app .semiContainer .right{
+        flex: 1;
+    }
+
+    .get__the_app .semiContainer{
+        width: 80%;
+    }
+}
+
+@media only screen and (max-width: 900px){
+    .get__the_app{
+        padding: 2rem 0;
+    }
+
+    .get__the_app .semiContainer{
+        width: 95%;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+.explore-options{
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+}
+
+.explore-options .semi_container{
+    width: 60%;
+}
+
+.explore-options .semi_container h5{
+    font-weight: 550;
+    font-size: 20px;
+    margin-bottom: 1rem;
+}
+.explore-options .semi_container .explore_section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+}
+
+.explore-options .semi_container .explore_section .options {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1.5px solid gray;
+    border-radius: 5px;
+    padding: 1rem;
+    width: auto; /* Let the width adjust dynamically */
+}
+
+
+
+.explore-options .semi_container .explore_section .options i {
+    margin-left: 5px; /* Adjust this margin as needed */
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.footer_section1{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.footer_section1 img{
+    width: 130px;
+}
+
+.section1__buttonContainer{
+    display: flex;
+    gap: 1rem;
+}
+
+.section1__buttonContainer button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    padding: 5px;
+    width: 90px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.navigation_container{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    width: 80%;
+    margin: auto;
+    gap: 1rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.link__container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.link__container h5{
+    font-weight: 700;
+    font-size: 15px;
+    margin-top: 5px;
+    letter-spacing: .8px;
+}
+
+.footer__link{
+    text-decoration: none;
+    color: gray;
+}
+
+.section__links_container button{
+    background: black;
+    border: none;
+    height: 25px;
+    width: 25px;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+.section__links_container button i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+    color: white;
+}
+
+.footer__section_logos{
+    width: 100%;
+}
+
+.disclamer{
+    width: 95%;
+    color: gray;
+    margin: auto;
+    border-top: 1px solid gray;
+    padding-top: 1.5rem;
+}
+
+@media only screen and (max-width: 900px){
+    .navigation_container{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .navigation_container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: 320px){
+    .navigation_container{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
