--- a/style.css
+++ b/style.css
@@ -120,6 +120,18 @@
     height: 20rem;
 }
 
+@media only screen and (max-width: 1097px) {
+    .we-offer {
+        height: 40rem;
+    }
+}
+
+@media only screen and (max-width: 543px) {
+    .we-offer {
+        height: 80rem;
+    }
+}
+
 .we-offer-card{
     border-radius: 10px;
     overflow: hidden;
